k8s-grupo5/db-seeder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-seeder
  namespace: grupo-5
spec:
  containers:
  - name: psql
    image: postgres:16-alpine
    command: ["sleep", "3600"]
    resources:
      requests:
        cpu: 50m
        memory: 128Mi
      limits:
        cpu: 100m
        memory: 256Mi
  restartPolicy: Never
